# portia

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yaml  deploy.yaml  promote.yaml
docs/: PR-FAQ.md  portia-implementation-plan.md
infrastructure/pulumi/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.staging.yaml  Pulumi.yaml  __main__.py  pyproject.toml
scripts/: cleanup_test_patients.py  import_charm_appointments.py  import_charm_ccda.py
src/: exceptions.py  main.py  settings.py
src/clients/: fhir_store.py  ms_converter.py  sentia.py  storage.py
src/core/: __init__.py  auth.py
src/import_/: ccda_preprocessor.py  gateway.py
src/import_/charm/: __init__.py  appointment_csv_parser.py  appointment_importer.py  composition_builder.py  extractor.py  linker.py
src/import_/matching/: __init__.py  identifier_service.py  patient_matcher.py
src/import_/validators/: ccda_validator.py
src/routers/: deps.py  health.py  import_routes.py
src/schemas/: health.py  import_schemas.py
src/services/: fhir_store_service.py  ms_converter_service.py  sentia_service.py  storage_service.py
src/transform/r4_to_r5/: __init__.py  allergy.py  bundle.py  composition.py  condition.py  encounter.py  immunization.py  medication.py  observation.py  organization.py  patient.py
src/utils/: __init__.py  secret_manager.py
tests/: conftest.py
tests/data/: PANOVA_TEST_PAT0015_ClinicalSummary.xml  PANOVA_TEST_PAT0015_ClinicalSummary.xml:Zone.Identifier  Patient_Example2_ClinicalSummary.xml
tests/fixtures/ccda/: sample_ccd.xml
tests/import_/: __init__.py  test_charm_composition.py  test_charm_extractor.py  test_charm_linker.py
tests/import_/matching/: test_patient_matcher.py
tests/routers/: test_health.py  test_import.py
