[tool.poetry]
name = "portia-infrastructure"
version = "0.1.0"
description = "Portia Health Data Interchange Service infrastructure"
authors = ["Panova"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pulumi = "^3.0.0"
pulumi-gcp = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
